Actually stop shark when stopProfiling() is called (bug 626437, r=bz).